# cyberNet23

./: .gitignore  INTRO.md  README.md
commerce/backups/cryptoscope/: README.txt
commerce/backups/cryptoscope/cryptoscope_website/: Dockerfile
commerce/backups/lostpass/: update.sh
commerce/data/cryptoscope/: MND  NRG  PRM  RNS  WFX
commerce/services/cryptoscope/: docker-compose.yml  update.sh
commerce/services/cryptoscope/cryptoscope_website/website/: pyproject.toml  requirements.txt  server.py  server.py.fix  settings.toml
commerce/services/cryptoscope/cryptoscope_website/website/sandbox/: account
commerce/services/cryptoscope/cryptoscope_website/website/templates/: account.html  index.html  navigation.html  search.html
commerce/services/lostpass/: docker-compose.yml  suricata.yml
cs/data/cryptoscope/: CSK  THK
cs/services/cryptoscope/: docker-compose.yml  reinstall.sh
cs/services/lostpass/: .env.example  README.txt  docker-compose.yml  reinstall.sh
energy/data/flowcontrol/: EXNLVZGC23QEUXHYFK50GTTVP6EOA6VR.key  data.json
energy/services/reactornet/: README.txt  docker-compose.yml  postgres-root  reinstall.sh  update.sh
space/backups/moonlink/: README.txt  update.sh
space/backups/satellite/: docker-compose.yml  reinstall.sh  update.sh
space/data/moonlink/: data.json
space/data/satellite/: user.json
space/services/moonlink/: client.py  docker-compose.yml  mooncomms.py  reinstall.sh
space/services/satellite/: README.txt  client.py  docker-compose.yml  stuk.sh
transport/services/its/: mongo-root  reinstall.sh  token.py
(+60 files in other folders)
